--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
         }
         .background {
-            background: url("/img/mountain.jpg") no-repeat 50% 70%;
+            background: url("img/mountain.jpg") no-repeat 50% 70%;
             height: 100vh;
         }
         #airplane {
@@ -22,7 +22,7 @@
 <body>
     <div class = "background">
         <div class = "airplane">
-            <img id="airplane" src="/img/airplane.png">
+            <img id="airplane" src="img/airplane.png">
         </div>
     </div>
 
